<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_prev3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="65dp"
        android:text="@string/nextbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <RadioGroup
        android:id="@+id/TF1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <RadioButton
            android:id="@+id/T1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jolrida"
            android:text="@string/a3_1_1" />

        <RadioButton
            android:id="@+id/F1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pilgi"
            android:text="@string/a3_1_2" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/TF2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <RadioButton
            android:id="@+id/T2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jolrida"
            android:text="@string/a3_2_1" />

        <RadioButton
            android:id="@+id/F2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pilgi"
            android:text="@string/a3_2_2" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/TF3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <RadioButton
            android:id="@+id/T3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jolrida"
            android:text="@string/a3_3_1" />

        <RadioButton
            android:id="@+id/F3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pilgi"
            android:text="@string/a3_3_2" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#B5DD88"
        android:layout_gravity="center_horizontal"
        android:text="@string/q3_1"
        android:fontFamily="@font/barunpenb"
        app:layout_constraintBottom_toTopOf="@+id/TF1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#B5DD88"
        android:layout_gravity="center_horizontal"
        android:text="@string/q3_2"
        android:fontFamily="@font/barunpenb"
        app:layout_constraintBottom_toTopOf="@+id/TF2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TF1" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#B5DD88"
        android:layout_gravity="center_horizontal"
        android:text="@string/q3_3"
        android:fontFamily="@font/barunpenb"
        app:layout_constraintBottom_toTopOf="@+id/TF3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TF2" />


</androidx.constraintlayout.widget.ConstraintLayout>